expansion selection styling

--- a/home.html
+++ b/home.html
@@ -99,9 +99,12 @@
 
             <div data-role="popup" id="expansion_popup" data-theme="b">
                 <ul data-role="listview" data-inset="true">
+                    <li data-role="list-divider" data-theme="b">
+                        <h2>EXPANSION SELECTION</h2>
+                    </li>
 <!--                     rise of the kingdom unselectable so the generator has enought material-->
                     <li><a href="#" class="exp_selector ui-icon-check ui-icon-right ui-disabled" name="riseofthekingdom"
-                            selected="select">Rise of the Kingdom</a></li>
+                            selected="select" style = "opacity: 1">Rise of the Kingdom</a></li>
                     <li><a href="#" class="exp_selector ui-icon-check ui-icon-right" name="stretchgoals17">Rise of the
                             Kingdom Stretch Goals</a></li>
                     <li><a href="#" class="exp_selector ui-icon-check ui-icon-right" name="legendofoni">Legend of
